--- a/editedBooks.html
+++ b/editedBooks.html
@@ -87,8 +87,8 @@
           </li>
           <li class="dropdown"><a href="patents.html"><span><h5>Patents</h5></span><i class="bi bi-chevron-down dropdown-indicator"></i> </i></a>
             <ul>
-              <li><a href="#">Filed Patent</a></li>
-              <li><a href="#">Granted Patent</a></li>
+              <li><a href="patents.html">Filed Patent</a></li>
+              <li><a href="patents.html">Granted Patent</a></li>
              
             </ul>
           </li>
@@ -345,12 +345,14 @@
         <div class="col-6 col-lg-2">
           <h3 class="footer-heading">Navigation</h3>
           <ul class="footer-links list-unstyled">
-            <li><a href="index.html"><i class="bi bi-chevron-right"></i> Members</a></li>
-            <li><a href="index.html"><i class="bi bi-chevron-right"></i> Publications</a></li>
-            <li><a href="category.html"><i class="bi bi-chevron-right"></i>Products</a></li>
-            <li><a href="single-post.html"><i class="bi bi-chevron-right"></i>Projects</a></li>
-            <li><a href="about.html"><i class="bi bi-chevron-right"></i>Sponsors</a></li>
-            <li><a href="contact.html"><i class="bi bi-chevron-right"></i>Gallery</a></li>
+            <li><a href="index.html"><i class="bi bi-chevron-right"></i>Home</a></li>
+            <li><a href="current-members.html"><i class="bi bi-chevron-right"></i> Members</a></li>
+            <li><a href="awardPapers.html"><i class="bi bi-chevron-right"></i> Publications</a></li>
+            <li><a href="products.html"><i class="bi bi-chevron-right"></i>Products</a></li>
+            <li><a href="projects.html"><i class="bi bi-chevron-right"></i>Projects</a></li>
+            <li><a href="sponsors.html"><i class="bi bi-chevron-right"></i>Sponsors</a></li>
+            <li><a href="gallery.html"><i class="bi bi-chevron-right"></i>Gallery</a></li>
+            <li><a href="liveData.html"><i class="bi bi-chevron-right"></i>Live Data</a></li>
           </ul>
         </div>
         <div class="col-6 col-lg-2">
