--- a/liveData.html
+++ b/liveData.html
@@ -82,8 +82,8 @@
           </li>
           <li class="dropdown"><a href="patents.html"><span><h5>Patents</h5></span><i class="bi bi-chevron-down dropdown-indicator"></i> </i></a>
             <ul>
-              <li><a href="#">Filed Patent</a></li>
-              <li><a href="#">Granted Patent</a></li>
+              <li><a href="patents.html">Filed Patent</a></li>
+              <li><a href="patents.html">Granted Patent</a></li>
              
             </ul>
           </li>
@@ -129,6 +129,24 @@
     </div>
 
   </header><!-- End Header -->
+
+  <main>
+     <section id="live_data">
+          <h1 id="current-members-titles">Live Data of Swan Lab</h1>
+          <h2>Lab 1</h2>
+          <div id="temperature">
+
+          </div>
+          <div id="humidity"></div>
+          <div id="no_of_students"></div>
+          <h2>Lab 2</h2>
+          <div id="temperature">
+
+          </div>
+          <div id="humidity"></div>
+          <div id="no_of_students"></div>
+     </section>
+  </main>
    
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
@@ -157,12 +175,14 @@
           <div class="col-6 col-lg-2">
             <h3 class="footer-heading">Navigation</h3>
             <ul class="footer-links list-unstyled">
+              <li><a href="index.html"><i class="bi bi-chevron-right"></i>Home</a></li>
               <li><a href="current-members.html"><i class="bi bi-chevron-right"></i> Members</a></li>
-              <li><a href="index.html"><i class="bi bi-chevron-right"></i> Publications</a></li>
+              <li><a href="awardPapers.html"><i class="bi bi-chevron-right"></i> Publications</a></li>
               <li><a href="products.html"><i class="bi bi-chevron-right"></i>Products</a></li>
-              <li><a href="single-post.html"><i class="bi bi-chevron-right"></i>Projects</a></li>
-              <li><a href="about.html"><i class="bi bi-chevron-right"></i>Sponsors</a></li>
-              <li><a href="contact.html"><i class="bi bi-chevron-right"></i>Gallery</a></li>
+              <li><a href="projects.html"><i class="bi bi-chevron-right"></i>Projects</a></li>
+              <li><a href="sponsors.html"><i class="bi bi-chevron-right"></i>Sponsors</a></li>
+              <li><a href="gallery.html"><i class="bi bi-chevron-right"></i>Gallery</a></li>
+              <li><a href="liveData.html"><i class="bi bi-chevron-right"></i>Live Data</a></li>
             </ul>
           </div>
           <div class="col-6 col-lg-2">
