--- a/patents.html
+++ b/patents.html
@@ -72,14 +72,15 @@
             </ul>
           </li>
           <li class="dropdown"><a href="awardPapers.html"><span><h5>Publications</h5></span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li><a href="awardPapers.html">Award Winning Papers</a></li>
-              <li><a href="journalPapers.html">Journal Papers</a></li>
-              <li><a href="conferencePapers.html">Conference Papers</a></li>
-              <li><a href="bookChapters.html">Book Chapters</a></li>
-              <li><a href="authoredBooks.html">Authored Books</a></li>
-              <li><a href="editedBooks.html">Edited Books</a></li>
-              
+            <ul class="footer-links list-unstyled">
+              <li><a href="index.html"><i class="bi bi-chevron-right"></i>Home</a></li>
+              <li><a href="current-members.html"><i class="bi bi-chevron-right"></i> Members</a></li>
+              <li><a href="awardPapers.html"><i class="bi bi-chevron-right"></i> Publications</a></li>
+              <li><a href="products.html"><i class="bi bi-chevron-right"></i>Products</a></li>
+              <li><a href="projects.html"><i class="bi bi-chevron-right"></i>Projects</a></li>
+              <li><a href="sponsors.html"><i class="bi bi-chevron-right"></i>Sponsors</a></li>
+              <li><a href="gallery.html"><i class="bi bi-chevron-right"></i>Gallery</a></li>
+              <li><a href="liveData.html"><i class="bi bi-chevron-right"></i>Live Data</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="products.html"><span><h5>Products</h5></span></a>
@@ -87,8 +88,8 @@
           </li>
           <li class="dropdown"><a href="patents.html"><span><h5>Patents</h5></span><i class="bi bi-chevron-down dropdown-indicator"></i> </i></a>
             <ul>
-              <li><a href="#">Filed Patent</a></li>
-              <li><a href="#">Granted Patent</a></li>
+              <li><a href="patents.html">Filed Patent</a></li>
+              <li><a href="patents.html">Granted Patent</a></li>
              
             </ul>
           </li>
