--- a/product-pg-5.html
+++ b/product-pg-5.html
@@ -85,8 +85,8 @@
         </li>
         <li class="dropdown"><a href="patents.html"><span><h5>Patents</h5></span><i class="bi bi-chevron-down dropdown-indicator"></i> </i></a>
           <ul>
-            <li><a href="#">Filed Patent</a></li>
-            <li><a href="#">Granted Patent</a></li>
+            <li><a href="patents.html">Filed Patent</a></li>
+            <li><a href="patents.html">Granted Patent</a></li>
            
           </ul>
         </li>
@@ -154,11 +154,11 @@
             <div class="text-start py-4 d-flex justify-content-center">
               <div class="custom-pagination">
                 <a href="product-pg4.html" class="prev" id="prev"><i class="ri-arrow-left-s-line"></i>Previous</a>
-                <a href="products.html" class="active">1</a>
-                <a href="product-pg2.html">2</a>
-                <a href="product-pg3.html">3</a>
-                <a href="product-pg4.html">4</a>
-                <a href="#">5</a>
+                <a href="products.html"data-page="1" >1</a>
+                <a href="product-pg2.html"data-page="2">2</a>
+                <a href="product-pg3.html"data-page="3">3</a>
+                <a href="product-pg4.html"data-page="4">4</a>
+                <a href="#" class="active"data-page="5">5</a>
                 
               </div>
             </div>
@@ -196,12 +196,14 @@
           <div class="col-6 col-lg-2">
             <h3 class="footer-heading">Navigation</h3>
             <ul class="footer-links list-unstyled">
-              <li><a href="index.html"><i class="bi bi-chevron-right"></i> Members</a></li>
-              <li><a href="index.html"><i class="bi bi-chevron-right"></i> Publications</a></li>
+              <li><a href="index.html"><i class="bi bi-chevron-right"></i>Home</a></li>
+              <li><a href="current-members.html"><i class="bi bi-chevron-right"></i> Members</a></li>
+              <li><a href="awardPapers.html"><i class="bi bi-chevron-right"></i> Publications</a></li>
               <li><a href="products.html"><i class="bi bi-chevron-right"></i>Products</a></li>
-              <li><a href="single-post.html"><i class="bi bi-chevron-right"></i>Projects</a></li>
-              <li><a href="about.html"><i class="bi bi-chevron-right"></i>Sponsors</a></li>
-              <li><a href="contact.html"><i class="bi bi-chevron-right"></i>Gallery</a></li>
+              <li><a href="projects.html"><i class="bi bi-chevron-right"></i>Projects</a></li>
+              <li><a href="sponsors.html"><i class="bi bi-chevron-right"></i>Sponsors</a></li>
+              <li><a href="gallery.html"><i class="bi bi-chevron-right"></i>Gallery</a></li>
+              <li><a href="liveData.html"><i class="bi bi-chevron-right"></i>Live Data</a></li>
             </ul>
           </div>
           <div class="col-6 col-lg-2">
@@ -262,6 +264,9 @@
 
   </footer>
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Product pagination -->
+ <script src="js/script.js"></script>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
