--- a/products.html
+++ b/products.html
@@ -85,8 +85,8 @@
         </li>
         <li class="dropdown"><a href="patents.html"><span><h5>Patents</h5></span><i class="bi bi-chevron-down dropdown-indicator"></i> </i></a>
           <ul>
-            <li><a href="#">Filed Patent</a></li>
-            <li><a href="#">Granted Patent</a></li>
+            <li><a href="patents.html">Filed Patent</a></li>
+            <li><a href="patents.html">Granted Patent</a></li>
            
           </ul>
         </li>
@@ -233,12 +233,14 @@
           <div class="col-6 col-lg-2">
             <h3 class="footer-heading">Navigation</h3>
             <ul class="footer-links list-unstyled">
-              <li><a href="index.html"><i class="bi bi-chevron-right"></i> Members</a></li>
-              <li><a href="index.html"><i class="bi bi-chevron-right"></i> Publications</a></li>
+              <li><a href="index.html"><i class="bi bi-chevron-right"></i>Home</a></li>
+              <li><a href="current-members.html"><i class="bi bi-chevron-right"></i> Members</a></li>
+              <li><a href="awardPapers.html"><i class="bi bi-chevron-right"></i> Publications</a></li>
               <li><a href="products.html"><i class="bi bi-chevron-right"></i>Products</a></li>
-              <li><a href="single-post.html"><i class="bi bi-chevron-right"></i>Projects</a></li>
-              <li><a href="about.html"><i class="bi bi-chevron-right"></i>Sponsors</a></li>
-              <li><a href="contact.html"><i class="bi bi-chevron-right"></i>Gallery</a></li>
+              <li><a href="projects.html"><i class="bi bi-chevron-right"></i>Projects</a></li>
+              <li><a href="sponsors.html"><i class="bi bi-chevron-right"></i>Sponsors</a></li>
+              <li><a href="gallery.html"><i class="bi bi-chevron-right"></i>Gallery</a></li>
+              <li><a href="liveData.html"><i class="bi bi-chevron-right"></i>Live Data</a></li>
             </ul>
           </div>
           <div class="col-6 col-lg-2">
@@ -300,65 +302,8 @@
   </footer>
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-     const paginationLinks = document.querySelectorAll(".custom-pagination a");
-     const prevLink = document.getElementById("prev");
-     const nextLink = document.getElementById("next");
- 
-     let currentPage = parseInt(document.querySelector(".custom-pagination a.active").dataset.page);
- 
-     paginationLinks.forEach(link => {
-         if (!link.classList.contains("prev") && !link.classList.contains("next")) {
-             link.addEventListener("click", function(event) {
-                 event.preventDefault();
-                 const page = parseInt(this.dataset.page);
-                 updateActivePage(page);
-                 loadPage(page);
-             });
-         }
-     });
- 
-     prevLink.addEventListener("click", function(event) {
-         event.preventDefault();
-         if (currentPage > 1) {
-             const prevPage = currentPage - 1;
-             updateActivePage(prevPage);
-             loadPage(prevPage);
-         }
-     });
- 
-     nextLink.addEventListener("click", function(event) {
-         event.preventDefault();
-         if (currentPage < paginationLinks.length - 2) {
-             const nextPage = currentPage + 1;
-             updateActivePage(nextPage);
-             loadPage(nextPage);
-         }
-     });
- 
-     function updateActivePage(pageNumber) {
-         paginationLinks.forEach(link => {
-             link.classList.remove("active");
-         });
-         const link = document.querySelector(`.custom-pagination a[data-page="${pageNumber}"]`);
-         if (link) {
-             link.classList.add("active");
-             currentPage = pageNumber;
-         }
-     }
- 
-     function loadPage(pageNumber) {
-         const link = document.querySelector(`.custom-pagination a[data-page="${pageNumber}"]`);
-         if (link) {
-             window.location.href = link.href;
-         }
-     }
- });
- 
- 
-   </script>
+  <!-- Products pagination logic -->
+  <script src="js/script.js"></script>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
